fixed: Aligning (stake/unstake/claim) button

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,6 +1,6 @@
 // Breackpoints use in mixins
-$low-mobile-bp: 375px;
-$mobile-bp: 992px;
+$low-mobile-bp: 380px;
+$mobile-bp: 430px;
 
 // Colors
 $primary: #56cdc0;
